--- a/main.css
+++ b/main.css
@@ -1,15 +1,16 @@
 html {
-    margin: 0;
-    padding: 0;
-    background-color: rgb(255, 196, 0);
+    box-sizing: border-box;
+}
+
+  *, *::before, *::after {
+    box-sizing: inherit;
 }
 
 body {
-    margin-left: auto;
-    margin-right: auto;
-    width: 85vw;
+    margin: 0;
     display: grid;
     justify-items: center;
+    background-color: rgb(255, 196, 0);
 }
 
 h1, h2, h3 {
@@ -44,8 +45,6 @@ h1 {
 }
 
 #playlist-area {
-    display: grid;
-    grid-template-rows: 2fr 1fr;
     border: black 0.0125rem solid;
     width: 19rem;
     height: 19rem;
