--- a/main.css
+++ b/main.css
@@ -7,20 +7,31 @@ html {
 }
 
 body {
-    margin: 0;
+    margin: 2rem;
+    height: 100vh;
     display: grid;
     justify-items: center;
     background-color: rgb(255, 196, 0);
 }
 
+h1 {
+    font-size: 1.802rem;
+}
+
+h2 {font-size: 1.602rem;}
+
+h3 {font-size: 1.424rem;}
+
+h4 {font-size: 1.266rem;}
+
+h5 {font-size: 1.125rem;}
+
+small, .text_small {font-size: 0.889rem;}
+
 h1, h2, h3 {
     text-align: center;
     margin-top: 0.5rem;
     margin-bottom: 0.7rem;
-}
-
-h1 {
-    margin-top: 4rem;
 }
 
 #progress-bar {
@@ -31,14 +42,15 @@ h1 {
     margin-bottom: 0.3rem;
 }
 
-#total-length {
+#current-time {
     display: inline;
 }
 
-#current-time {
+#total-length {
     display: inline;
     margin-left: 14.5rem;
 }
+
 
 #controls {
     margin-top: 1.5rem;
