--- a/main.css
+++ b/main.css
@@ -30,8 +30,6 @@ small, .text_small {font-size: 0.889rem;}
 
 h1, h2, h3 {
     text-align: center;
-    margin-top: 0.5rem;
-    margin-bottom: 0.7rem;
 }
 
 #progress-bar {
@@ -54,6 +52,11 @@ h1, h2, h3 {
 
 #controls {
     margin-top: 1.5rem;
+    text-align: center;
+}
+
+#controls img {
+    width: 2.5rem;
 }
 
 #playlist-area {
