adjust teh player layout on mobile

--- a/main.css
+++ b/main.css
@@ -28,8 +28,19 @@ h5 {font-size: 1.125rem;}
 
 small, .text_small {font-size: 0.889rem;}
 
-h1, h2, h3 {
+h1, h2, h3, p {
     text-align: center;
+    margin: 0;
+}
+
+#artist-name {
+    font-size: 3rem;
+    margin-top: 1rem;
+}
+
+#track-name {
+    font-size: 2rem;
+    font-weight: bold;
 }
 
 #progress-bar {
@@ -49,9 +60,8 @@ h1, h2, h3 {
     margin-left: 14.5rem;
 }
 
-
 #controls {
-    margin-top: 1.5rem;
+    margin-top: 1rem;
     text-align: center;
 }
 
@@ -59,11 +69,10 @@ h1, h2, h3 {
     width: 2.5rem;
 }
 
-#playlist-area {
+#thumbnail {
     border: black 0.0125rem solid;
     width: 19rem;
     height: 19rem;
-    margin-top: 2rem;
 }
 
 #playlist-area img {
