--- a/main.css
+++ b/main.css
@@ -21,9 +21,7 @@ body {
     background-repeat: no-repeat;
 }
 
-h1 {
-    font-size: 1.802rem;
-}
+h1 {font-size: 1.802rem;}
 
 h2 {font-size: 1.602rem;}
 
@@ -43,7 +41,6 @@ h1, h2, h3, p {
 #player {
     position: relative;
     width: 100%;
-    /* height: 19rem; */
 }
 
 #track-info-p {
@@ -156,13 +153,42 @@ border-bottom: solid rgb(241, 175, 20) 0.1rem;
 }
 
 @media only screen and (min-width: 50em) {
+
+    h1 {font-size: 3.052rem;}
+    
+    h2 {font-size: 2.441rem;}
+    
+    h3 {font-size: 1.953rem;}
+    
+    h4 {font-size: 1.563rem;}
+    
+    h5 {font-size: 1.25rem;}
+    
+    small, .text_small {font-size: 0.8rem;}
+
     main {
         display: grid;
         grid-template-columns: 1fr 1fr;
         column-gap: 5rem;
     }
 
-    #player-area {
-        align-self: center;
+    #artist-name {
+        font-size: 2.5rem;
+    }
+    
+    #track-name {
+        font-size: 1.5rem;
+    }
+
+    .artist-list {
+        font-size: 1.4rem;
+    }
+    
+    .track-list {
+        font-size: 1.4rem;
+    }
+
+    hr {
+        display: none;
     }
 }
