--- a/main.css
+++ b/main.css
@@ -51,7 +51,7 @@ button {
     background-color: black;
     border-radius: 3rem;
     padding: 0.5rem;
-    margin: 0.5rem;
+    /* margin: 0.5rem; */
     box-shadow: black;
 }
 
@@ -114,10 +114,11 @@ button {
 #controls {
     margin-top: 1rem;
     text-align: center;
+    /* min-width: 24rem; */
 }
 
 #controls img {
-    width: 2.5rem;
+    width: 2rem;
 }
 
 #playlist-area {
@@ -169,7 +170,7 @@ border-bottom: solid rgb(241, 175, 20) 0.1rem;
 transform: scale(1.15);
 }
 
-@media only screen and (min-width: 50em) {
+@media only screen and (min-width: 52em) {
 
     h1 {font-size: 3.052rem;}
     
@@ -207,5 +208,13 @@ transform: scale(1.15);
 
     hr {
         display: none;
+    }
+    
+}
+
+@media only screen and (min-width: 68em) {
+
+    #controls img {
+        width: 3rem;
     }
 }
