--- a/main.css
+++ b/main.css
@@ -95,8 +95,22 @@ button {
 }
 
 #progress-bar {
-    border: white 0.125rem solid;
+    height: 0.5rem;
+    background-color: white;
+    border-radius: 1.5rem;
     margin-bottom: 0.5rem;
+}
+
+#progress-bar::before {
+    content: "";
+    display: flex;
+    align-items: center;
+    position: absolute;
+    max-width: 100%;
+    width: calc(var(--width, 0) * 1%);
+    height: 0.5rem;
+    background-color: brown;
+    border-radius: 1.5rem;
 }
 
 #current-time {
